<resources>
    <string name="app_name">Happy Places</string>
    <string name="action_add">action_add</string>
    <string name="title">Title</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="add_image">Add Image</string>
    <string name="btn_text_save">Save</string>
    <string name="image_content_description">image</string>
    <string name="note_text_no_happy_places_found_yet_kindly_add_one">No Happy Places Found Yet. Kindly add one.</string>
    <string name="get_current_location">Get Current Location</string>
</resources>